   Math-BigInt distribution and the backend distributions are as few and as
   small as possible. This makes for easier release management.

2015-09-17 v1.999702 pjacklam

 * The overloaded log() is a unary operator, so don't pass additional
   arguments.

 * Fix blog() so the cases $x->blog() and $x->blog(undef) work correctly. An
   undefined base means that blog() should use base e (Euler's number).

 * Both CORE::log() and other mathematical software returns inf for log(inf),
   so we do the same.

 * Add tests for log() as well as templates for future tests of the other
   overloadable functions.

 * Improve descriptions of a few tests.

2015-09-21 v1.999703 pjacklam

 * Fix blog() in Math::BigInt and Math::BigFloat to work correctly regardless
   of the base.

 * Correct existing tests in bigintpm.inc and bigfltpm.inc.

 * Update test plans (number of tests) in t/bare_mbi.t, t/bigintpm.t, and
   t/sub_mbi.t.

 * Add test files t/blog-mbf.t and t/blog-mbi.t for better testing of the
   blog() methods.

2015-09-25 v1.999704 pjacklam

 * objectify() in lib/Math/BigInt.pm now uses 'isa' not 'eq' to check object
   relationship. This is necessary for correct handling of subclasses.

 * objectify() in lib/Math/BigInt.pm no longer expects as_int(), as_number()
   and as_float() to return objects, but allows them to return numbers
   formatted as strings. This is used by some other modules on CPAN.

 * Better documentation of as_int() and as_number() in lib/Math/BigInt.pm.

 * Add documentation for as_float() in lib/Math/BigFloat.pm

 * Added test files t/objectify_mbf.t and t/objectify_mbi.t.

2015-09-25 v1.999705 pjacklam

 * Avoid using "my" in a false conditional. See "Deprecated use of my() in
   false conditional" in perldiag(1).

 * Faster algorithm for bpi() when precision is >= 1000.

Please send us test-reports, your experiences with this and your ideas - we love
to hear about our work!

The Math-BigInt developers <bignum@lists.scsys.co.uk>